# quietlelouch-content-service

./: .dev.env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
app/: alembic.ini
app/application/: exceptions.py  lifespan.py  main.py  otel_config.py  tempo.py
app/application/api/v1/: base.py  handlers.py  mappers.py  schemas.py
app/application/events/: handlers.py
app/core/settings/: base.py  dev.py  prod.py
app/di/: __init__.py  container.py
app/di/providers/: __init__.py  application.py  core.py  domain.py  infra.py
app/di/providers/infra/: __init__.py  app.py  dao.py  mappers.py  repository.py
app/di/providers/logic/: __init__.py
app/domain/: exceptions.py
app/domain/entities/: author.py  base.py  content.py
app/domain/logic/: services.py  use_cases.py
app/domain/mappers/: __init__.py  entities.py  values.py
app/domain/values/: author.py  base.py  content.py  exceptions.py
app/domain/values/content/: common.py  image.py
app/infra/pg/: types.py  utils.py
app/infra/pg/alembic/: env.py
app/infra/pg/dao/: __init__.py  author.py  base.py  exceptions.py  image.py  language.py  role.py  tag.py  title.py
app/infra/pg/dto/: image.py
app/infra/pg/mappers/: __init__.py  common.py  image.py  orm_to_entity.py  schema_to_orm.py  tag.py
app/infra/pg/models/: __init__.py  author.py  base.py  common.py  content.py  language.py  (+4 more)
app/infra/rmq/: events.py  queues.py
app/infra/s3/: base.py  boto_client.py  boto_service.py  const.py  exceptions.py
app/logic/use_cases/: get_content.py  schemas.py
docker_compose/: app.yaml  infra.yaml
(+39 files in other folders)
